--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "mock": "node mock/server.js",
+    "mock": "nodemon mock/server.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
