--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "qiniu-js": "^2.5.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-intl": "^4.6.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
